# DesignPattern

./: CMakeLists.txt  README.md  compile.sh  config.h.in  main.cpp  run.sh
AbstractFactory/: CMakeLists.txt  README.md
AbstractFactory/include/: IAbstractFactory.h  IButton.h  ICheckbox.h  Linux.h  LinuxTemplate.h  Window.h  WindowTemplate.h
AbstractFactory/src/: Linux.cpp  LinuxTemplate.cpp  Window.cpp  WindowTemplate.cpp
Adapter/: CMakeLists.txt  README.md
Adapter/include/: Adaptee.h  Adapter.h  Target.h
Adapter/src/: Adaptee.cpp  Adapter.cpp  Target.cpp
BasicKnowdge/: CMakeLists.txt  README.md
BasicKnowdge/include/: DependencyInversionPrinciple.h  InterfaceSegregationPrinciple.h  LiskovSubstitutionPrinciple.h  OpenClosedPriciple.h  SingleResponsibilityPrinciple.h
BasicKnowdge/src/: SingleResponsibilityPrinciple.cpp
Builder/: CMakeLists.txt  README.md
Builder/include/: IPizzaBuilder.h  PepperoniPizza.h  Pizza.h  SausagePizza.h  Shipper.h
Builder/src/: PepperoniPizza.cpp  Pizza.cpp  SausagePizza.cpp  Shipper.cpp
FactoryMethod/: CMakeLists.txt  README.md
FactoryMethod/include/: App.h  Factory.h  IItem.h  Iphone14.h  Iphone15.h
FactoryMethod/src/: App.cpp  Factory.cpp  Iphone14.cpp  Iphone15.cpp
Prototype/: CMakeLists.txt  README.md
Prototype/include/: Circle.h  IShape.h  ShapeCache.h  Square.h
Prototype/src/: Circle.cpp  ShapeCache.cpp  Square.cpp
Singleton/: CMakeLists.txt  README.md
Singleton/include/: StrongSingleton.h  WeakSingleton.h
Singleton/src/: StrongSingleton.cpp  WeakSingleton.cpp
